correct some css and bullet lists spacing

--- a/styles.css
+++ b/styles.css
@@ -199,7 +199,7 @@ a.gb:hover {
     font-family: ubuntu, Sans-Serif;
   }
   h4 {
-    font-size: 2vw;
+    font-size: 3vw;
     font-family: ubuntu, Sans-Serif;
   }
   .dash {
